kubernetes/Cluster-Int-Temp/deployments/media/prowlarr/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: prowlarr
    namespace: media
spec:
    selector:
        app: prowlarr
    ports:
        - name: ENC[AES256_GCM,data:PI8=,iv:UHJRKHWP/IeXl3apf17ecDhXktqrps2vbaguaCTSpdo=,tag:hSr1lRRQ17ZPevq1kcBRFA==,type:str]
          port: ENC[AES256_GCM,data:E4xaMA==,iv:0KUZBVvt/ksCC76CsI9gTZbf5a5KoH/3IJ0cDRu88Es=,tag:Ktpb3CgKbW8x5gLofOPYww==,type:int]
          targetPort: ENC[AES256_GCM,data:Guv95w==,iv:cDBoAhBen8cQEH5oK+bhGunds42B2JqhG7L2adkLGKA=,tag:wP8pUp5yRkB6F1CoWz6H6Q==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxZ0Y4Z0pmRmRTWG16RlZN
[...]
            lv1i2uDZRWkgH4J0cOX0Wgw4dyWCBzj27xdeEcjp7lypI6x8S+X5Mg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-14T23:40:27Z"
    mac: ENC[AES256_GCM,data:lZUvPfLs1MTqS4CoEcvu2C+tOK6wBf7KPPDudoHoUYm6iCLkq4yKP+yAcKSS8oM8+lRJKFddobY+DIezKEbgn4pJMa8HXWe5GmJH+LrcbBSemAqNUpsDg4R9PtPRk9X3Y4FHHOyXr8YyRRwc/8CLmbltzA9Bnq3bD2jhwpwhT3c=,iv:YQ/rT1kk9qXhjEz3YQ7RAm2odu5zGqMVpUtFnm0l9Bw=,tag:3JAIkehjb2pocX5j4Ae0Hw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
