kubernetes/Cluster-Int-Temp/deployments/media/prowlarr/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: prowlarr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:CiYS3Q9DiWDy57fXyEnJTyXfBhB7L199PonZ+w==,iv:T7XDjJeePjDiVXARIJjb2Ei9ws8RoOgwZhWLgVZCCxA=,tag:VRH7PHKD4REQIF6JPxPadw==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:nD4IvWvF8zk=,iv:gozB+9yXBVRBBDcdX19K2n3lgJUGZOOB3ixAJyAhbSQ=,tag:17Re+jzLAZasdtcffaL1lA==,type:str]
              port: ENC[AES256_GCM,data:c9pa4g==,iv:VEmgzL56M3Odw9AOmNZAXMfo4pjeQyzeDn1vl79PRlE=,tag:3cXcWNmQ1eM1y2E7vVxjyA==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:8g+JQhdFKT5A4/SSmqo=,iv:AY7XTEd5Sxe+1wxvRx7B1nNj9pWbpBMCPAxD5mUMLHU=,tag:CeKQ81qq4DCx+HBx3/qxaQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyS01ETjl0L0FsV0Q5UGJ4
[...]
            q5dmPdD9mFnFllKT5LpHRmw7JKZu3pcVe+67AOJ5H0eXujRCqCbfsQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-14T23:39:57Z"
    mac: ENC[AES256_GCM,data:uiwizOm1Oe98dWaWbFpnANZybVe+woHS0NXMhkzGfcoDnC4WIkKFD8+s8nI+3zxwZ63yaraSieSQAPNgknAdib1FiZ+O15W+EcfuA7rXLYUqrVxJc9HSI0xC+p/LiJt3RpqPx7ohuya2oyuydlvE+PGtuiGgpbx25zO7q4Oc3dE=,iv:a4UC87wpPc/QM1d37HE/Ib9MDsbT5y/sR91bOrQB+mQ=,tag:9tSMS/tthXxjjmtmX/B4eA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
